<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corDeFundo"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textTituloiQueFome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:hint="@string/iQueFome_Titulo"
            android:textAlignment="center"
            android:textColorHint="@color/text_color"
            android:textSize="50dp"
            android:textStyle="italic"
            android:layout_margin="30dp"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:paddingTop="150dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"  >

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@string/fontFamily"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text_color" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@string/fontFamily"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColorHint="@color/text_color" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/default_system_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewMissPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/esqueceuSenha"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="15dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/seCadastre"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_color"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"  />

</RelativeLayout>