<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corDeFundo"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".ShareActivity">

    <RelativeLayout
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textTituloiQueFome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:hint="@string/iQueFome_Titulo"
            android:textAlignment="center"
            android:textColorHint="@color/text_color"
            android:textSize="50dp"
            android:textStyle="italic" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/Scrow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/perfil_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingTop="15sp"
                android:src="@drawable/usericon100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="vertical"
                android:paddingTop="15sp">


                <TextView
                    android:id="@+id/textViewSobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sobrenome"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />
                <!--android:layout_margin="15dp"-->

                <TextView
                    android:id="@+id/textViewNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/nome"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />
                <!--android:layout_margin="15dp"-->

            </LinearLayout>


            <!--</ScrollView>-->

            <!--<ScrollView-->
            <!--android:id="@+id/Scrow23"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_above="@+id/botaoHistoricoPedidos_layout"-->
            <!--android:layout_below="@+id/perfil_image"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:orientation="vertical"-->
            <!--android:paddingTop="40sp">-->

            <LinearLayout
                android:id="@+id/Campos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/perfil_image"
                android:layout_margin="15sp"
                android:orientation="vertical"
                android:paddingTop="40sp">

                <TextView
                    android:id="@+id/textViewShare_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Compartilhe sua visita ao restaurante"
                    android:textAlignment="center"
                    android:textColorHint="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextNomeRestaurante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="80sp"
                    android:hint="Nome do Restaurante"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"/>

                <EditText
                    android:id="@+id/editTextNumeroEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:paddingTop="40sp"
                    android:hint="Número com o DDD"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/botaoCompartilhar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_below="@+id/Campos">

                <Button
                    android:id="@+id/botaoCompartilhar"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/default_system_button"
                    android:text="@string/botao_enviar"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>